use connect method on RuuviTag

--- a/BTKit/Source/Localizable.strings
+++ b/BTKit/Source/Localizable.strings
@@ -1,2 +1,3 @@
 // BTLogicError
 "BTLogicError.notConnected" = "BTKit: not connected to the device.";
+"BTLogicError.notConnectable" = "BTKit: device is not connectable.";
