connect if reading logs. Need to do it for heartbeat

--- a/BTKit/Source/en.lproj/Localizable.strings
+++ b/BTKit/Source/en.lproj/Localizable.strings
@@ -1,3 +1,4 @@
 // BTLogicError
 "BTLogicError.notConnected" = "BTKit: not connected to the device.";
 "BTLogicError.notConnectable" = "BTKit: device is not connectable.";
+"BTLogicError.connectedByOthers" = "BTKit: device is connected by other clients";
