--- a/BTKit/Source/ru.lproj/Localizable.strings
+++ b/BTKit/Source/ru.lproj/Localizable.strings
@@ -1,3 +1,4 @@
 // BTLogicError
 "BTLogicError.notConnected" = "BTKit: не подключен к устройству.";
 "BTLogicError.notConnectable" = "BTKit: устройство не поддерживает соединение.";
+"BTLogicError.connectedByOthers" = "BTKit: к устройству подключены другие клиенты";
