add desired connection interval

--- a/BTKit/Source/en.lproj/Localizable.strings
+++ b/BTKit/Source/en.lproj/Localizable.strings
@@ -2,3 +2,4 @@
 "BTLogicError.notConnected" = "BTKit: not connected to the device.";
 "BTLogicError.notConnectable" = "BTKit: device is not connectable.";
 "BTLogicError.connectedByOthers" = "BTKit: device is connected by other clients";
+"BTLogicError.notConnectedInDesiredInterval" = "BTKit: failed to connect to peripheral in desired interval";
