handle BT powered off user action

--- a/BTKit/Source/en.lproj/Localizable.strings
+++ b/BTKit/Source/en.lproj/Localizable.strings
@@ -3,3 +3,4 @@
 "BTLogicError.notConnectable" = "BTKit: device is not connectable.";
 "BTLogicError.connectedByOthers" = "BTKit: device is connected by other clients";
 "BTLogicError.notConnectedInDesiredInterval" = "BTKit: failed to connect to peripheral in desired interval";
+"BTLogicError.bluetoothWasPoweredOff" = "BTKit: Bluetooth was powered off";
