--- a/BTKit/Source/ru.lproj/Localizable.strings
+++ b/BTKit/Source/ru.lproj/Localizable.strings
@@ -3,3 +3,4 @@
 "BTLogicError.notConnectable" = "BTKit: устройство не поддерживает соединение.";
 "BTLogicError.connectedByOthers" = "BTKit: к устройству подключены другие клиенты";
 "BTLogicError.notConnectedInDesiredInterval" = "BTKit: не удалось подключиться к устройству в течение желаемого интервала";
+"BTLogicError.bluetoothWasPoweredOff" = "BTKit: Bluetooth был отключен";
